src/app/components/sections/kickball/kickball-profile.css
.img_login {
    position: absolute;
    max-width: 150px;
    max-height: 150px;
    padding: 0;
    margin-left: auto;
    margin-right: auto;
    left: 0;
    right: 0;
    /* float: left; */
    opacity: 0.3;
    z-index:-1;
}

.kb-sacc-login input{
    text-indent: 20px;
}

.kb-sacc-login input::placeholder{
    color: white;
}

.kb-login-icons{
    position: absolute;
    font-size:15px;
    padding: 10px;
    z-index:1;
}

.kb-login-card{
    /* max-width:  400px; */
    /* margin: 0 auto; */
    background: none;
    color:white;
}

.kb-login-card .form-control{
    /* max-width:  400px; */
    /* margin: 0 auto; */
    background: none;
    color:white;
}

.custom-placeholder{
    padding: 0.25rem;
    background-color: var(--bs-body-bg);
    border: var(--bs-border-width) solid var(--bs-border-color);
    border-radius: var(--bs-border-radius);
    max-width: 100%;
    height:auto !important;
    width:100%;
}


.side-info {
    height: 100%;
    vertical-align: top;
    box-sizing: border-box;
    white-space: normal;
}


@media only screen and (min-width: 901px) {
    .img-thumbnail{
        width: 100px;
        height: 100px;
    }
    /* .btn .btn-sm{
        --bs-btn-padding-y: .25rem;
        --bs-btn-padding-x: .5rem;
        --bs-btn-font-size: .75rem;
    } */
     .leagueName{
        font-size: 25px;
     }
     .teamName{
        font-size: 20px;
     }
     .side-info{
        padding: 0 20px;
        width: 455px;
        display: inline-block;
        font-size: 10px;
     }
     .custom-btn-size{
        --bs-btn-padding-y: .25rem;
        --bs-btn-padding-x: .5rem;
        --bs-btn-font-size: .75rem;
    }

}
@media only screen and (max-width: 900px) {
    .img-thumbnail{
        width: 45px;
        height: 45px;
        padding: 0.1rem;
    }
    .btn .btn-sm{
        --bs-btn-padding-y: .2rem;
        --bs-btn-padding-x: .25rem;
        --bs-btn-font-size: .4rem;
    }
    .leagueName{
       font-size: 10px;
     }
     .teamName{
        font-size: 8px;
     }
    
     .side-info {
        padding: 0 5px;
        width: auto;
        display: block;
        font-size: 8px;
    }
     .custom-btn-size{
        --bs-btn-padding-y: .2rem;
        --bs-btn-padding-x: .25rem;
        --bs-btn-font-size: .4rem;
    }
    .badge{
        --bs-badge-font-size: 0.4em;
    }
}

